Fix focus visible state

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -101,6 +101,10 @@
       margin: 0;
       padding: 0;
       position: absolute;
+
+      &:focus-visible {
+        outline: none;
+      }
     }
 
     .checked {
